fix the annoting overflow

--- a/style.css
+++ b/style.css
@@ -129,8 +129,20 @@ ul {
   border:none !important;
 }
 
-
 .book .book-summary ul.summary li ul {
     padding-right: 2em !important;
 }
 
+@media only screen and (max-width: 600px) {
+    /* horizontal scrollbar for tables if mobile screen */
+    .assumptions {
+        overflow-x: auto !important;
+        display: block !important;
+    }
+    .book .book-body.fixed {
+      overflow-y: revert !important;
+    }
+    .book .book-body .page-wrapper .page-inner {
+    padding: 20px 0 10px !important;
+   }
+}
